
if (target_os == "") {
    target_os = host_os
}

if (target_cpu == "") {
  target_cpu = host_cpu
}
if (current_cpu == "") {
  current_cpu = target_cpu
}
if (current_os == "") {
  current_os = target_os
}

# All binary targets will get this list of configs by default.
_shared_binary_target_configs = [ 
  "//gn:executable_ldconfig",
  "//gn:compiler_defaults"
]

# Apply that default list to the binary target types.
set_defaults("executable") {
  configs = _shared_binary_target_configs
  # Executables get this additional configuration.
}

set_defaults("static_library") {
  configs = _shared_binary_target_configs
}
set_defaults("shared_library") {
  configs = _shared_binary_target_configs
}
if (target_os == "eduos") {
  
  if (target_cpu == "x86") {
    set_default_toolchain("//gn/toolchain:eduos-gccx86")
  }
} else {
  set_default_toolchain("//gn/toolchain:gcc")
}