


executable("kernel") {
    link_file = ""

    if (target_cpu == "x86") {
        link_file = rebase_path("link32.ld")
    }
 
    configs = []

    ldflags = [
        "-T",
        link_file,
        "-lgcc",
        "-ffreestanding",
        "-nostdlib",
        "-std=c++14"
    ]

    cflags = [
        "-nostdlib",
        "-nostdinc",
        "-fno-builtin",
        "-fno-stack-protector",
        "-nostartfiles",
        "-nodefaultlibs",
        "-Wall",
        "-Wextra",
        "-finline-functions",
    ]

    if (target_cpu == "x86") {
        cflags += [
            "-DCONFIG_X86_32",
            "-DBOOST_NO_STD_LOCALE"
        ]
    }

    sources = [
        "loader.asm",
        "kmain.cpp",
        "kernel.cpp",
        "mmu.cpp",
    ]

    include_dirs = [
        "//include",
        "//extern",
    ]

    if (target_cpu == "x86") {
        include_dirs += [
            "//arch/include/x86"
        ]

        sources += [
            "arch/lib.asm",
            "arch/int32.asm",
            "arch/gdt/gdt.c",
            "arch/idt/idt.c",
            "arch/idt/isr.c",
            "arch/idt/timer.c",
            "arch/vga/vga.c",
            "arch/irq/irq.c",
        ]
    }
}